basic styling done

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -4,7 +4,15 @@
   box-sizing: border-box;
 }
 .search {
-  width: 100vw;
   height: 10vh;
-  background-color: red;
+}
+.main {
+  height: 90vh;
+}
+h3 {
+  color: black;
+  font-size: 1em;
+}
+span {
+  color: black;
 }
