--- a/src/component/SearchBar/SearchBar.module.scss
+++ b/src/component/SearchBar/SearchBar.module.scss
@@ -1,10 +1,34 @@
-.Search {
-  width: 100vw;
-  height: 15vh;
-  display: flex;
-  justify-content: center;
-  background-color: rebeccapurple;
-}
+
+  .search {
+    width: 100vw;
+    height: 10vh;
+    background-color: rgb(196, 38, 38);
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    border-bottom: 3px solid white;
+  }
+
 input {
-  width: 200px
+  width: 200px;
+  height: 20px;
+  padding: 10px;
+  outline: none;
+  margin-left: 4px;
+  margin-right: 4px;
+}
+
+button {
+  height: 25px;
+  margin-left: 20px;
+  border-radius: 8%;
+  padding: 3px;
+  outline: none;
+}
+
+p {
+  color: whitesmoke;
+  text-shadow: 1px 1px 2px black;
+  padding: 10px;
 }
