--- a/src/container/Main/Main.module.scss
+++ b/src/container/Main/Main.module.scss
@@ -4,4 +4,5 @@
   background-image: url("../../assets/background.jpg");
   background-size: cover;
   background-repeat: no-repeat;
+  display: flex;
 }
