--- a/src/container/Main/Main.module.scss
+++ b/src/container/Main/Main.module.scss
@@ -6,3 +6,12 @@
   background-repeat: no-repeat;
   display: flex;
 }
+
+@media only screen and (max-width: 700px) {
+  .landing {
+    background-image: unset;
+    background-color: rgb(20, 1, 1);
+    background-repeat: repeat-y;
+    overflow-y: scroll;
+  }
+}
