--- a/src/component/Card/Card.module.scss
+++ b/src/component/Card/Card.module.scss
@@ -1,14 +1,13 @@
 .Card {
   height: 40vh;
-  width: 15vw;
-  padding: 20px;
+  width: 18vw;
+  padding: 8px;
   margin-top: 20px;
   text-align: center;
   background-color: whitesmoke;
-  border-radius: 5%;
+  border-radius: 3%;
   font-family: 'Khula', sans-serif;
-  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.27);
-  font-size: 1em;
+  font-size: 0.8em;
   display: flex;
   flex-direction: column;
 
@@ -22,13 +21,12 @@
   height: 80%;
   width: 100%;
   align-items: center;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .text {
   color: black;
   height: 30%;
-  font-size: 1em;
   display: flex;
   flex-direction: column;
   overflow-y: auto;
@@ -38,4 +36,18 @@ h3 {
 }
 p {
   margin-top: 0;
+}
+
+@media only screen and (max-width: 700px) {
+  .Card {
+    width: 70vw;
+    height: 80vh;
+  }
+
+  .Card img {
+    height: 80%;
+    width: 100%;
+    align-items: center;
+    object-fit: contain;
+  }
 }
