--- a/src/component/SearchBar/SearchBar.module.scss
+++ b/src/component/SearchBar/SearchBar.module.scss
@@ -8,6 +8,7 @@
     align-items: center;
     text-decoration: none;
     border-bottom: 3px solid white;
+
   }
 
 input {
@@ -29,6 +30,17 @@ button {
 
 p {
   color: whitesmoke;
-  text-shadow: 1px 1px 2px black;
-  padding: 10px;
+  padding: 5px;
 }
+
+
+@media only screen and (max-width: 700px) {
+  .search {
+    display: flex;
+    flex-direction: column;
+  }
+  input {
+    width: 100px;
+  }
+} 
+
