--- a/src/container/CardList/CardList.module.scss
+++ b/src/container/CardList/CardList.module.scss
@@ -1,9 +1,14 @@
-
   .cards {
     display: flex;
     flex-wrap: wrap;
-    margin: 10px;
+    margin: 20px;
     align-items: center;
-    justify-content: space-evenly;
-    overflow-y: scroll;
+    justify-content: space-between;
+  }
+
+  @media only screen and (max-width: 700px) {
+      .cards {
+        justify-content: center;
+        margin: 0 auto;
+      }
   }
